WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181290
WebContent process crashes while loading
https://www.classicspecs.com
https://bugs.webkit.org/show_bug.cgi?id=181290
Summary
WebContent process crashes while loading https://www.classicspecs.com
alan
Reported
2018-01-04 08:33:33 PST
rdar://problem/36225906
Attachments
Patch
(4.61 KB, patch)
2018-01-04 09:30 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.61 KB, patch)
2018-01-04 09:47 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2018-01-04 09:30:52 PST
Created
attachment 330469
[details]
Patch
Brent Fulgham
Comment 2
2018-01-04 09:45:08 PST
Comment on
attachment 330469
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=330469&action=review
The fix is so tiny compared to the explanation! I think this looks good, but I think Simon should have the final say.
> Source/WebCore/ChangeLog:11 > + we need to deregister it from all those blocks. We do it by walking up on the ancestor block chain
"We do it by walking up the ancestor block chain" (no 'on')
> Source/WebCore/ChangeLog:12 > + and check if parent (grandparent etc) block still contains this float. Once we find the topmost block,
"and checking if the parent..."
alan
Comment 3
2018-01-04 09:47:10 PST
Created
attachment 330472
[details]
Patch
WebKit Commit Bot
Comment 4
2018-01-04 12:14:57 PST
Comment on
attachment 330472
[details]
Patch Clearing flags on attachment: 330472 Committed
r226413
: <
https://trac.webkit.org/changeset/226413
>
WebKit Commit Bot
Comment 5
2018-01-04 12:14:59 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug